apps/invidious/service-invidious-companion.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: invidious-companion
  name: invidious-companion
spec:
  selector:
    app: invidious-companion
  ports:
    - name: http
      port: 8282
      targetPort: 8282
      protocol: TCP
