apps/invidious/networkpolicy-invidious.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: invidious
spec:
  endpointSelector: {}
  ingress:
    # From pods in the same namespace
    - fromEndpoints:
        - {}
    # From Ingress
    - fromEntities:
        - ingress
    # From Cloudflared namespace
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudflared
  egress:
    # To pods in the same namespace
    - toEndpoints:
        - {}
    # To DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # ICMP/ICMPv6 back to CoreDNS, e.g. port-unreachable when a reply arrives after
    # the pod already closed the socket
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      icmps:
        - fields:
            - family: IPv4
              type: DestinationUnreachable
            - family: IPv6
              type: DestinationUnreachable
    # To the Internet (YouTube)
    - toEntities:
        - world
